meu projeto briefing
aula do Anderson

--- a/aula 3 .html
+++ b/aula 3 .html
@@ -1,38 +1,87 @@
-<doctype html></doctype>
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Rastro Urbano</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: white;
+      margin: 0;
+    }
 
+    header {
+      background-color: #000;
+      padding: 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      color: #ff4d00;
+    }
+
+    nav {
+      background-color: #222;
+      padding: 10px;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #ff4d00;
+    }
+
+    section {
+      padding: 20px;
+      text-align: center;
+    }
+
+    footer {
+      background-color: #000;
+      color: #888;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
+</head>
 <body>
-    <table>
-        <tr>
-            <td> coluna 1 </td>
-            <td> coluna 2 </td>
-            <td> coluna 3 </td>
-            <td> coluna 4 </td>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117734.92094236187!2d-47.38862411401862!3d-22.757353542335437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1744845043964!5m2!1spt-BR!2sbr"
-                width="100%eight=" 450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <ul>
-                <li>
 
-                    <a href="https;//www.google.com" title="visitar exemplo">visite </a>
-                </li>
-                <li>
-                    
-                </li>
-            </ul>
+  <header>
+    <h1>Rastro Urbano</h1>
+  </header>
 
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#loja">Loja</a>
+    <a href="#camisetas">Camisetas</a>
+    <a href="#moletons">Moletons</a>
+    <a href="#calcas">Calças</a>
+    <a href="#bones">Bonés</a>
+    <a href="#tenis">Tênis</a>
+    <a href="#acessorios">Acessórios</a>
+    <a href="#carrinho">Carrinho</a>
+    <a href="#sobre">Sobre</a>
+    <a href="#blog">Blog</a>
+    <a href="#editorial">Editorial</a>
+    <a href="#novidades">Novidades</a>
+  </nav>
 
+  <section id="home">
+    <h2>Bem-vindo à Rastro Urbano</h2>
+    <p>Seu estilo, sua rua.</p>
+  </section>
 
+  <footer>
+    &copy; 2025 Rastro Urbano - Todos os direitos reservados.
+  </footer>
 
-
-
-        </tr>
-
-
-
-    </table>
 </body>
-
-
 </html>
