--- a/aulaanderson.html
+++ b/aulaanderson.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">pesquisa</a>
+            <a class="navbar-brand" href="#">Inicio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
             <br>
         </h3>
     </ul>
-    
+<h3 style="color: blue;">
     <form action="salvar.php" method="post" enctype="multipart/form-data">
         <label for="nome">digite seu nome</label>
         <input type="text" placeholder="nome" id="nome" class="form-control">
@@ -92,8 +92,7 @@
         <label for="anexo">anexar arquivo:</label>
         <input type="file" id="anexo" class="form-control">
         <label for="estado"> estado</label>
-
-
+    </h3>
 </body>
 
 </html>
